# OpenGrade

./: .gitignore  .opengrade-agent.example.json  AGENTS.md  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  preview.command
config/: storage.example.json
scripts/: build.mjs  check-storage.mjs  dev.mjs  init-storage.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/core/: commandProtocol.ts  coreBackend.ts  imageState.ts  mockClient.ts  useOpenGrade.ts
src/editors/: Editors.tsx  ScopesEditor.tsx
src/layout/: AreaLayout.tsx  layoutModel.ts
