[package]
name = "opengrade"
version = "0.2.0"
description = "OpenGrade — Color Grading Application"
authors = ["OpenGrade"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff", "exr"] }
base64 = "0.22"
